@@ -1,3 +1,4 @@
+* BUG#8093 Use a single shared rule engine instance across a transaction
 * FEA#7598 Add the "Code" column in the rules list view so it can be filtered on
 
 Version 1.14 - 2017-11-09
